
Problems fixed:
    1. Window.open() using an empty name was replacing the main window rather than creating a new one.
    2. bug #883293 - typos in tutorial task 1 step 4
    3. bug #883301 - more typos in tutorial task 1 step 4
    4. bug #873169 - Cookie headers were generated with no space after the semicolon (unlike IE, Netscape, and Mozilla)

 4-Dec-2003
Acknowledgements:
    Thanks to Andrew Bickerton for adding the following JavaScript support:
        Form.length          - returns the number of controls in a form
        Control.type         - returns a test description of the control type
        Control.defaultValue - returns the default value for text controls
        Initial page tokenizing now skips JavaScript while looking for header tags
        Writing into an empty frame no longer corrupts all empty frames

Problems fixed:
    1. Using JavaScript to write into an empty frame could change all empty frames to the same value

17-Oct-2003
Problems fixed:
    1. Bug #823433: document.cookie now defaults to the empty string, like IE and Mozilla, rather than null

 1-Oct-2003
Acknowledgements:
    Thanks to Patrick Lightbody for adding JavaScript support for the Style object

Additions:
    1. Added support for javascript HTMLElement.style property

30-Sep-2003
Problems fixed:
    1. HttpUnit no longer complains about not being able to find the Rhino jar (js.jar) is scripting is disabled
       before any pages are read.

16-Sep-2003
Acknowledgements:
    Thanks to Chris Hane for making it easier to add support for javascript properties and for providing support for
    getAttribute() to handle any property defined in the underlying Node

Additions:
    1. HTMLElement now supports a getAttribute method to return the value of any named attribute.
    2. PseudoServer can now received chunked requests, and will not send a "Content-Length" header if a
       "Transfer-Encoding: chunked" has been defined.